testsuite/tests/grammar/invalid_token_families/test.out
== invalid_decl.lkt ==
invalid_decl.lkt:4:5: error: Only lexer rules allowed in family blocks
4 |     family alphanumericals {
  |     ^


== present_twice.lkt ==
present_twice.lkt:10:9: error: Duplicate token name
10 |         Number <- p"[0-9]+"
   |         ^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
